fix contact section and space for controls on mobile

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -80,6 +80,7 @@
         flex-direction: column;
         .left-contact {
             .contact-info {
+                display: block;
                 .contact-item {
                     display: flex;
                     flex-wrap: wrap;
@@ -117,7 +118,7 @@
         top: auto;
         bottom: 0;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-evenly;
         left: 50%;
         transform: translateX(-50%);
         width: 100%;
